vcl/skia/gdiimpl.cxx
@@ -277,12 +277,6 @@ SkiaSalGraphicsImpl::~SkiaSalGraphicsImpl()
 
 void SkiaSalGraphicsImpl::Init() {}
 
-void SkiaSalGraphicsImpl::recreateSurface()
-{
-    destroySurface();
-    createSurface();
-}
-
 void SkiaSalGraphicsImpl::createSurface()
 {
     SkiaZone zone;
@@ -453,7 +447,17 @@ void SkiaSalGraphicsImpl::checkSurface()
     }
     else if (GetWidth() != mSurface->width() || GetHeight() != mSurface->height())
     {
-        if (!avoidRecreateByResize())
+        if (avoidRecreateByResize())
+            return;
+
+        if (!GetWidth() || !GetHeight())
+        {
+            SAL_WARN("vcl.skia", "recreate(" << this << "): can't create empty surface "
+                                             << Size(GetWidth(), GetHeight())
+                                             << " => keeping old one!");
+            return;
+        }
+
         {
             Size oldSize(mSurface->width(), mSurface->height());
             // Recreating a surface means that the old SkSurface contents will be lost.
@@ -468,7 +472,10 @@ void SkiaSalGraphicsImpl::checkSurface()
                 flushDrawing();
                 snapshot = SkiaHelper::makeCheckedImageSnapshot(mSurface);
             }
-            recreateSurface();
+
+            destroySurface();
+            createSurface();
+
             if (snapshot)
             {
                 SkPaint paint;
